--- a/src/components/usual-suspects/modals/ModalInfantsMobile.astro
+++ b/src/components/usual-suspects/modals/ModalInfantsMobile.astro
@@ -1,5 +1,5 @@
 ---
-import Accordion from "../Accordion.astro";
+import Accordion from "../../Accordion.astro";
 ---
 
 <div id="usual-suspect-modal-template" style="display: none;">
