feat: :sparkles: Modal suspects mobile implementation

--- a/src/components/usual-suspects/tabs/AdultTab.astro
+++ b/src/components/usual-suspects/tabs/AdultTab.astro
@@ -163,14 +163,15 @@ const data_card_4 = {
       from hypophosphatasia:
     </p>
 
-    <button
-      class="button btn--usual-suspect-modal-trigger"
-      data-target="adults-modal">View List</button
-    >
-
-    <ModalMobile />
+    <div class="usual-suspect__trigger">
+      <button
+        class="button btn--usual-suspect-modal-trigger"
+        data-target="adults-modal">View List</button
+      >
+    </div>
   </section>
 </section>
+<ModalMobile />
 
 <style>
   .mobile--only {
