--- a/src/styles/components/usual-suspects.scss
+++ b/src/styles/components/usual-suspects.scss
@@ -274,6 +274,12 @@
         font-weight: 700;
         padding: 0 1rem;
     }
+
+    .usual-suspect__trigger {
+        .btn--usual-suspect-modal-trigger {
+            margin: 2rem auto;
+        }
+    }
 }
 
 
