Add Modal Grids Component

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -36,6 +36,7 @@
 @import './components/stay-connected.scss';
 @import './components/_skeleton.scss';
 @import './components/_usual-supect-modal.scss';
+@import './components/_usual-modal-grids.scss';
 
 
 .section__home-video {
